# TolkienSDK-python

./: README.md  pyproject.toml
Tolkien/: Client.py  __init__.py  strings.py  utils.py
Tolkien/models/: APIResponse.py
Tolkien/requests/: MovieRequest.py  SDKRequest.py
tests/: conftest.py  test_MovieRequest.py
tests/mock/: all_movies.json  all_quotes.json  single_movie.json
