[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = "TolkienSDK"
version = "1.0.0"
description = "Facilitates the interaction with LOTR API"
readme = "README.md"
authors = [{ name = "me", email = "python@python.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "rfc3339>=6.0",
    "requests==2.28.2",
    "dataclasses==0.8",
    "requests-mock==1.9.0",
    "pytest==5.2.0",
    "pytest-cov==4.0.0"
]

